2005-01-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/i_callbacks.nw (i_callback_edit_linetype): Modified to create 
	a list of relevant objects that is passed to line_type_dialog.

	* noweb/x_dialog.nw (line_type_dialog*): Rewrote most of the code
	for the line type dialog. Now it applies to more than a single
	object.
	
	* noweb/i_callbacks.nw (i_callback_edit_update): Adapted for the
	new o_update_component().

	* noweb/o_misc.nw (o_update_component): Rewritten function to
	avoid duplication of attributes when updating. Prototype change to
	take a single object as second argument.

2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/it_IT.po: Added the Italian translation by Petrecca Michele.
  	Thanks!

	* noweb/o_misc.nw: Fixed one possible cause for a crash when updating
	components.  Also started adding the other two requested modes of
	update component (delete and intelligent replace).  These two other
	modes are not functional yet.

	* noweb/x_grid.nw, i_vars.nw, g_rc.nw, g_register.nw, 
	lib/system-gschemrc.in: Added the ability to adjust the grid
	dot size via the "grid-dot-size" rc keyword.

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-10-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Added comment to attribute list.

2004-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/versionsym1.sch versionsym2.sch versionsym3.sch
	versionsym_basic.sym versionsym_invalid.sym versionsym_major.sym
	versionsym_minor.sym versionsym_minor2.sym: Added a bunch of 
	test schematic for the symversion attribute

	* tests/gafrc: Added the first global rc file for all gaf tools.

	* lib/system-gschemrc.in: Added symversion= to the attribute list
	keyword. 

	* noweb/gschem.nw: Added call to put up an error dialog box if there
	are symbols which have changed too much.

	* noweb/x_window.nw: Added code to free up the list of changed 