@@ -136,6 +136,7 @@ int   default_bus_ripper_type = COMP_BUS_RIPPER;
 int   default_bus_ripper_rotation = NON_SYMMETRIC;
 int   default_force_boundingbox = FALSE;
 int   default_grid_dot_size = 1;
+int   default_print_vector_threshold = 3;
 
 int   default_width = 800;  /* these variables are used in x_window.c */
 int   default_height = 600;
@@ -257,6 +258,7 @@ i_vars_set(TOPLEVEL *w_current)
 
   w_current->force_boundingbox  = default_force_boundingbox;
   w_current->grid_dot_size  = default_grid_dot_size;
+  w_current->print_vector_threshold  = default_print_vector_threshold;
 }
 
 
