@@ -1,0 +1,26 @@
+v 20041228 1
+T 43300 54200 9 10 1 0 0 0 1
+one line ONE LINE
+T 43300 53400 9 10 1 0 0 0 2
+two lines TWO LINES
+two lines TWO LINES
+B 43200 54100 1800 300 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+B 43200 53300 2000 600 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 43300 52300 9 10 1 0 0 0 3
+three lines THREE LINES
+three lines THREE LINES
+three lines THREE LINES
+B 43200 52200 2400 900 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 43300 51000 9 10 1 0 0 0 4
+four lines FOUR LINES
+four lines FOUR LINES
+four lines FOUR LINES
+four lines FOUR LINES
+B 43200 50900 2100 1100 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 43300 49400 9 10 1 0 0 0 5
+five lines FIVE LINES
+five lines FIVE LINES
+five lines FIVE LINES
+five lines FIVE LINES
+five lines FIVE LINES
+B 43200 49300 2000 1400 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
