@@ -236,6 +236,8 @@ void s_project_setup_rest(TOPLEVEL * pr_current)
   pr_current->bus_ripper_symname = NULL;
 
   pr_current->force_boundingbox = FALSE;
+  pr_current->grid_dot_size = 1;
+  pr_current->print_vector_threshold = 3;
 
   /* part of page mechanism addition commented out 
      pr_current->zoom_factor=0;
